<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/fragment_launch_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/fragment_launch_burger_section" />


        <Button
            android:id="@+id/fragment_launch_button_toggle_bread_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_launch_toggle_bread_type" />


        <Button
            android:id="@+id/fragment_launch_button_toggle_cheese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_launch_toggle_cheese" />

        <Button
            android:id="@+id/fragment_launch_button_burger_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_launch_burger_clear" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/fragment_launch_text_beverage_section" />

        <Button
            android:id="@+id/fragment_launch_button_toggle_lemon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_launch_toggle_lemon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/fragment_launch_edit_text_sugar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/fragment_launch_edit_text_sugar"
                android:inputType="number" />

            <Button
                android:id="@+id/fragment_launch_button_apply_sugar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_launch_sugar_apply" />
        </LinearLayout>


        <Button
            android:id="@+id/fragment_launch_button_beverage_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_launch_beverage_clear" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/fragment_launch_result_section" />

        <LinearLayout
            android:id="@+id/fragment_launch_container_result_burger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp">

            <TextView
                android:id="@+id/fragment_launch_text_view_burger_bread"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/fragment_launch_text_view_burger_cheese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_launch_container_result_beverage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp">

            <TextView
                android:id="@+id/fragment_launch_text_view_beverage_sugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/fragment_launch_text_view_beverage_lemon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/fragment_launch_button_make_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_launch_make_order" />
    </LinearLayout>
</ScrollView>
